# articubot_three

./: CMakeLists.txt  README.md
articubot_three/: cmd_publisher_node.py  hw_config.py
articubot_three/cache/: gps_cache_node.py  imu_cache_node.py
articubot_three/communication/: command_talker_node.py  heading_estimator_node.py  hw_config.py  monitor_node_pc.py  sensors_fast_listener_node.py
articubot_three/listeners/: sensors_fast_listener_node.py  sensors_reliable_listener_node.py
articubot_three/monitor/: monitor_node.py
config/: gz_bridge.yaml
description/: gps.xacro  magnetometer.xacro  robot.urdf.xacro
launch/: articubot_three.launch.py  main_launch.launch.py  real_communication_sim.launch.py  real_communication_test.launch.py  swarm_manager.launch.py
log/: latest_list
worlds/: green_cube_space.world  green_space.world
